# Proposal-Diagram-Copilot

./: .gitignore  README.md  SUMMARY.md  dev.sh  package-lock.json  package.json  start.sh
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/: layout.tsx  page.tsx
docs/releases/: v0.1.0-mvp.md
services/api/: pyproject.toml
services/api/src/: main.py
workers/gpu-engine/: README.md
