[project]
name = "api"
version = "0.1.0"
description = "FastAPI gateway for proposal-diagram-copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.0",
    "python-pptx>=1.0.2",
    "pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
